deployment/kubernetes/ingress-ng/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fpm-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: fpm-address
    networking.gke.io/managed-certificates: certificate-sendy-loysoft-com,certificate-friendsplus-me,certificate-hydra-friendsplus-me,certificate-login-friendsplus-me,certificate-crawler-friendsplus-me,certificate-api-friendsplus-me,certificate-app-friendsplus-me
spec:
  rules:
    - host: friendsplus.me
      http:
        paths:
          - backend:
              serviceName: fpm-landing-landing
              servicePort: 6000
    - host: sendy.loysoft.com
      http:
        paths:
          - backend:
              serviceName: fpm-sendy-sendy
              servicePort: 80
    - host: hydra.friendsplus.me
      http:
        paths:
          - backend:
              serviceName: fpm-hydra-hydra
              servicePort: 4444
    - host: login.friendsplus.me
      http:
        paths:
          - backend:
              serviceName: fpm-login
              servicePort: 3000
    - host: crawler.friendsplus.me
      http:
        paths:
          - backend:
              serviceName: fpm-crawler-crawler
              servicePort: 6000
    - host: api.friendsplus.me
      http:
        paths:
          - backend:
              serviceName: fpm-api
              servicePort: 3000
    - host: app.friendsplus.me
      http:
        paths:
          - backend:
              serviceName: fpm-webapp
              servicePort: 8080
    - host: developers.friendsplus.me
      http:
        paths:
          - backend:
              serviceName: fpm-developers
              servicePort: 3000
